syntax = "proto3";

package uars.v1;

option go_package = "github.com/uars7/platform/shared/proto/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// Common message types used across all services

message Health {
  enum Status {
    UNKNOWN = 0;
    HEALTHY = 1;
    UNHEALTHY = 2;
    DEGRADED = 3;
  }
  
  Status status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> metadata = 4;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  map<string, string> attributes = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message SecurityContext {
  string user_id = 1;
  string session_id = 2;
  repeated string permissions = 3;
  string tenant_id = 4;
  google.protobuf.Timestamp expires_at = 5;
}

message AuditLog {
  string id = 1;
  string user_id = 2;
  string action = 3;
  string resource = 4;
  google.protobuf.Any metadata = 5;
  google.protobuf.Timestamp timestamp = 6;
  string ip_address = 7;
  string user_agent = 8;
}

message Event {
  string id = 1;
  string type = 2;
  string source = 3;
  google.protobuf.Any data = 4;
  google.protobuf.Timestamp timestamp = 5;
  map<string, string> labels = 6;
}

message Response {
  bool success = 1;
  string message = 2;
  google.protobuf.Any data = 3;
  repeated string errors = 4;
}
